<resources>
    <string name="app_name">Pra Assesment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="persegi_panjang">Persegi Panjang</string>
    <string name="segitiga">Segitiga</string>
    <string name="panjang">Panjang</string>
    <string name="lebar">Lebar</string>
    <string name="hitung">hitung</string>
    <string name="luas">Luas =</string>
    <string name="keliling">Keliling =</string>
    <string name="alas">Alas</string>
    <string name="tinggi">Tinggi</string>
    <string name="luas2">luas =</string>
    <string name="keliling2">keliling =</string>
    <string name="hitung2">hitung</string>
    <string name="share">Share</string>


</resources>
