<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"

>

    <data>
        <variable
                name="luas"
                type="Double"
        />
        <variable
                name="keliling"
                type="double"
        />
    </data>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".SegitigaFragment">


            <!-- TODO: Update blank fragment layout -->
            <EditText
                    android:layout_width="345dp"
                    android:layout_height="56dp"
                    android:hint="@string/alas"
                    android:id="@+id/alas"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp" android:layout_marginTop="88dp"
            />

            <EditText
                    android:layout_width="346dp"
                    android:layout_height="46dp"
                    android:hint="@string/tinggi"
                    android:id="@+id/tinggi"
                    app:layout_constraintEnd_toEndOf="@+id/alas"
                    app:layout_constraintHorizontal_bias="1.0"
                    android:layout_marginTop="64dp"
                    app:layout_constraintTop_toBottomOf="@+id/alas"
                    app:layout_constraintStart_toStartOf="@+id/alas"/>

            <Button
                    android:id="@+id/bhitung2"
                    android:text="@string/hitung2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="@+id/tinggi"
                    app:layout_constraintStart_toStartOf="@+id/tinggi"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/tinggi"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/luas2"
                    android:textSize="20sp"
                    android:id="@+id/luas2"
                    app:layout_constraintStart_toStartOf="@+id/tinggi"
                    android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/bhitung2"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/keliling2"
                    android:textSize="20sp"
                    android:id="@+id/kel_tinggi"
                    app:layout_constraintTop_toBottomOf="@+id/luas2"
                    android:layout_marginTop="44dp"
                    app:layout_constraintStart_toStartOf="@+id/luas2"/>

            <TextView
                    android:id="@+id/tv_hasi3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{luas.toString()}"
                    app:layout_constraintTop_toBottomOf="@+id/bhitung2"
                    app:layout_constraintStart_toEndOf="@+id/luas2"
                    android:layout_marginTop="52dp"
                    android:layout_marginLeft="52dp"
                    android:layout_marginStart="52dp"/>

            <TextView
                    android:id="@+id/tv_hasil4"
                    android:layout_width="5dp"
                    android:layout_height="13dp"
                    android:text="@{keliling.toString()}"
                    app:layout_constraintStart_toEndOf="@+id/kel_tinggi"
                    android:layout_marginLeft="28dp"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="44dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_hasi3"/>
            <Button
                    android:id="@+id/share2"
                    android:text="@string/share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="68dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_hasil4"
                    android:layout_marginLeft="56dp"
                    android:layout_marginStart="56dp"
                    app:layout_constraintStart_toEndOf="@+id/kel_tinggi"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>