<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
>
    <data>
              <variable
                      name="luas"
                      type="Integer"
              />
              <variable
                      name="keliling"
                      type="Integer"
              />
    </data>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".PersegiPanjangFragment">

            <!-- TODO: Update blank fragment layout -->
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="92dp"
                    android:hint="@string/panjang"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="32sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="32sp"
                    app:layout_constraintHorizontal_bias="1.0"
                    android:id="@+id/panjang"/>

            <EditText
                    android:layout_width="346dp"
                    android:layout_height="46dp"
                    android:hint="@string/lebar"
                    app:layout_constraintStart_toStartOf="@+id/panjang"
                    app:layout_constraintEnd_toEndOf="@+id/panjang"
                    app:layout_constraintHorizontal_bias="1.0"
                    android:id="@+id/lebar"
                    android:layout_marginTop="48dp"
                    app:layout_constraintTop_toBottomOf="@+id/panjang"/>

            <Button
                    android:id="@+id/bhitung1"
                    android:text="@string/hitung"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="52dp"
                    app:layout_constraintTop_toBottomOf="@+id/lebar"
                    app:layout_constraintStart_toStartOf="@+id/lebar"
                    app:layout_constraintEnd_toEndOf="@+id/lebar"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/luas"
                    android:textSize="20sp"
                    android:layout_marginTop="36dp"
                    app:layout_constraintTop_toBottomOf="@+id/bhitung1"
                    app:layout_constraintStart_toStartOf="@+id/lebar"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:id="@+id/luas1"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/keliling"
                    android:textSize="20sp"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/luas1"
                    app:layout_constraintStart_toStartOf="@+id/luas1"
                    android:id="@+id/kel_panjang"/>

            <TextView
                    android:id="@+id/tv_hasil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{luas.toString()}"
                    app:layout_constraintTop_toBottomOf="@+id/bhitung1"
                    app:layout_constraintStart_toEndOf="@+id/luas1"
                    android:layout_marginTop="36dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginStart="60dp"/>

            <TextView
                    android:id="@+id/tv_hasil2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{keliling.toString()}"
                    app:layout_constraintTop_toBottomOf="@+id/tv_hasil"
                    app:layout_constraintStart_toEndOf="@+id/kel_panjang"
                    android:layout_marginTop="40dp"
                    android:layout_marginLeft="36dp"
                    android:layout_marginStart="36dp"/>
            <Button
                    android:id="@+id/share"
                    android:text="Share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@+id/kel_panjang"
                    android:layout_marginLeft="36dp"
                    android:layout_marginStart="36dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_hasil2"
                    android:layout_marginTop="100dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>